--- a/main.css
+++ b/main.css
@@ -220,7 +220,59 @@ footer:after {
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 960px) {
-	body {
-		background-color: red;
+
+	#selling-points li {
+		width: 40%;
+		padding: 0 5%;
+		margin: 20px 0;
+	}
+
+	footer ul {
+		width: 50%;
+	}
+
+	footer ul:nth-child(odd) {
+		clear: both;
+	}
+
+	#quote {
+		width: 90%;
+		padding: 70px 5% 40px 5%;
+		background: url(images/two-quotes.png) no-repeat center 33px/50px;
+		background-color: #efefef;
 	}
 }
+
+@media screen and (max-width: 830px) {
+	
+	header nav {
+		float: none;
+	}
+
+	header nav li {
+		margin-left: 0;
+		width: 16.66%;
+		text-align: center;
+		font-size: 14px;
+	}
+
+	header h1.logo {
+		float: none;
+		margin: 0 auto 15px;
+	}
+
+	#latest-work li {
+		width: 60%;
+		margin: 30px 20% !important;
+		float: none;
+	}
+
+	#latest-work h2 {
+		text-align: center;
+	}
+
+}
+
+
+
+
